--- a/Front - Proyecto/src/Administrativo/VerificarBiologo/Aprobados.html
+++ b/Front - Proyecto/src/Administrativo/VerificarBiologo/Aprobados.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Verificar Biologo</title>
-    <link rel="stylesheet" href="output.css">
+    <title>Solicitudes aprobadas</title>
+    <link rel="stylesheet" href="/src/Administrativo/output.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
@@ -58,42 +58,42 @@
     }
 
     @media only screen and (min-height:530px ) and (max-height:720px){
-        #celu{
+        #solicitud{
             top: 38%;
         }
     }
     @media only screen and (min-height:740px ) and (max-height:799px){
-        #celu{
+        #solicitud{
             top: 33%;
         }
     }
     @media only screen and (min-height:800px ) and (max-height:840px){
-        #celu{
+        #solicitud{
             top: 34%;
         }
     }
     @media only screen and (min-height:844px ) and (max-height:896px){
-        #celu{
+        #solicitud{
             top: 28%;
         }
     }
     @media only screen and (min-height:900px ) and (max-height:1000px){
-        #celu{
+        #solicitud{
             top: 27%; 
         }
     }
     @media only screen and (min-height:1024px ) and (max-height:1080px){
-        #celu{
+        #solicitud{
             top: 26%; 
         }
     }
     @media only screen and (min-height:1180px ) and (max-height:1250px){
-        #celu{
+        #solicitud{
             top: 22%; 
         }
     }
     @media only screen and (min-height:1366px ) and (max-height:1400px){
-        #celu{
+        #solicitud{
             top: 18%; 
         }
     }
@@ -132,7 +132,7 @@
 
             <a href="VerificarBiologo.html" class="hover:bg-[#D7EFFF] bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Verificar biólogos</a>
             <a href="Reportes_Admin.html" class="hover:bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Ver reportes</a>
-            <a href="#" class="hover:bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Administrar página</a>
+            <a href="/src/Administrativo/CRUD'S/Administrativos.html" class="hover:bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Administrar página</a>
         </div>
         <hr class="">
     </nav>
@@ -343,18 +343,18 @@
                     </tbody>
                 </table>  
             </div>
-            <div id="celu" class="flex items-center justify-center relative">
+            <div id="solicitud" class="flex items-center justify-center relative">
                 <div class="w-[80%] lg:w-[90%] bg-[#FFFFFF] rounded-lg hidden">
                     <div class="flex p-4 ml-3">
                         <button class="flex bg-[#D7EFFF] p-2 rounded-md" onclick="Deshacer()">
                             <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Regresar.png?raw=true" class="mr-1">
                             Regresar
                         </button>
-                        <button id="celu-00001-A" class="flex bg-[#D7EFFF] ml-3 p-2 rounded-md" onclick="toggleEstado('00001-A', 'A')" data-fila-id="00001">
+                        <button id="solicitud-00001-A" class="flex bg-[#D7EFFF] ml-3 p-2 rounded-md" onclick="toggleEstado('00001-A', 'A')" data-fila-id="00001">
                             <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Shi.png?raw=true" class="mr-1">
                             Aprobar
                         </button>
-                        <button id="celu-00001-R" class="flex bg-[#D7EFFF] ml-3 p-2 rounded-md" onclick="toggleEstado('00001-R', 'R')" data-fila-id="00001">
+                        <button id="solicitud-00001-R" class="flex bg-[#D7EFFF] ml-3 p-2 rounded-md" onclick="toggleEstado('00001-R', 'R')" data-fila-id="00001">
                             <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%91o.png?raw=true" class="h-5 w-5 mt-[3px] mr-1">
                             Rechazar
                         </button>
@@ -388,24 +388,30 @@
                     <span class="text-lg hidden lg:block"> Bandeja de entrada</span>
                 </div>
                 <div class="lg:ml-2 mt-[5px] lg:mt-2 w-full flex lg:block text-sm md:text-base justify-around md:justify-evenly lg:justify-normal">
-                    <button id="botonRecibidas" onclick="filtrarSolicitudes('recibida')">
-                        <div class=" ml-2 lg:ml-0 flex rounded-[50px] hover:bg-[#7EBBAA] lg:p-2 md:pl-3 pl-2 py-1 w-[6rem] md:w-[7rem] lg:w-[12rem]">
-                            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Recibido.png?raw=true" alt="icono-recibido" class="w-[20px] h-[20px] mt-[2px]">
-                            <p class="ml-1 md:ml-2 lg:ml-3 mt-1 md:mt-0">Recibido</p>
-                        </div>
-                    </button>
-                    <button id="botonAprobadas" onclick="filtrarSolicitudes('aprobada')">
-                        <div class="flex rounded-[50px] hover:bg-[#7EBBAA] lg:p-2 md:pl-3 pl-2 py-1 w-[6.5rem] md:w-[8rem] lg:w-[12rem] ml-4 md:ml-0">
-                            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Aprobado.png?raw=true" alt="icono-aprobado" class="w-[20px] h-[20px] mt-[2px]">
-                            <p class="ml-1 md:ml-2 lg:ml-3 mt-1 md:mt-0">Aprobado</p>
-                        </div>
-                    </button>
-                    <button id="botonDesaprobadas" onclick="filtrarSolicitudes('desaprobada')">
-                        <div class="flex rounded-[50px] hover:bg-[#7EBBAA] lg:p-2 md:pl-3 pl-2 py-1 w-[8rem] md:w-[9.5rem] lg:w-[12rem] ml-2 md:ml-0">
-                            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Desaprobado.png?raw=true" alt="icono-desaprobado" class="w-[20px] h-[20px] mt-[2px]">
-                            <p class="ml-1 md:ml-2 lg:ml-3 mt-1 md:mt-0">Desaprobado</p>
-                        </div>
-                    </button>
+                    <a href="Solicitudes.html">
+                        <button id="botonRecibidas" onclick="filtrarSolicitudes('recibida')">
+                            <div class=" ml-2 lg:ml-0 flex rounded-[50px] hover:bg-[#7EBBAA] lg:p-2 md:pl-3 pl-2 py-1 w-[6rem] md:w-[7rem] lg:w-[12rem]">
+                                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Recibido.png?raw=true" alt="icono-recibido" class="w-[20px] h-[20px] mt-[2px]">
+                                <p class="ml-1 md:ml-2 lg:ml-3 mt-1 md:mt-0">Recibido</p>
+                            </div>
+                        </button>
+                    </a>
+                    <a href="Aprobados.html">
+                        <button id="botonAprobadas" onclick="filtrarSolicitudes('aprobada')">
+                            <div class="flex rounded-[50px] bg-[#7EBBAA] lg:p-2 md:pl-3 pl-2 py-1 w-[6.5rem] md:w-[8rem] lg:w-[12rem] ml-4 md:ml-0">
+                                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Aprobado.png?raw=true" alt="icono-aprobado" class="w-[20px] h-[20px] mt-[2px]">
+                                <p class="ml-1 md:ml-2 lg:ml-3 mt-1 md:mt-0">Aprobado</p>
+                            </div>
+                        </button>
+                    </a>
+                    <a href="Rechazados.html">
+                        <button id="botonDesaprobadas" onclick="filtrarSolicitudes('desaprobada')">
+                            <div class="flex rounded-[50px] hover:bg-[#7EBBAA] lg:p-2 md:pl-3 pl-2 py-1 w-[8rem] md:w-[9.5rem] lg:w-[12rem] ml-2 md:ml-0">
+                                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Desaprobado.png?raw=true" alt="icono-desaprobado" class="w-[20px] h-[20px] mt-[2px]">
+                                <p class="ml-1 md:ml-2 lg:ml-3 mt-1 md:mt-0">Rechazado</p>
+                            </div>
+                        </button>
+                    </a>
                 </div>
             </div>
             <footer class="bg-[#276B58] rounded-lg text-white text-[10.8px] xl:mt-9 lg:mt-5 hidden lg:block">
@@ -428,7 +434,7 @@
             </footer>
         </section>                                                                  <!--xl:min-w-[54rem] para pantalla normal    lg:min-w-[20rem] lg:max-w-xl xl:min-w-[54rem] xl:max-w-[60rem] 2xl:min-w-[58rem]--> <!--lg:w-[25rem] xl:min-w-[42rem] 2xl:w-[60rem] md:w-[28rem]-->
     </div>
-    <script src="index.js"></script>
+    <script src="/src/Administrativo/index.js"></script>
     <script src="/src/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.min.js" defer></script>
 </body>
