--- a/Front - Proyecto/src/Administrativo/PerfilAdmin.html
+++ b/Front - Proyecto/src/Administrativo/PerfilAdmin.html
@@ -9,7 +9,7 @@
     <div class="w-80 h-[24rem] text-lg">
         <div class="ml-6 mr-6">
             <div class="flex justify-center">
-                <h1 class="text-2xl">Perfil de usuario</h1>
+                <h1 class="text-2xl">Perfil de Administrativo</h1>
                 <button onclick="cerrarPerfil()" class="absolute ml-80 -mt-5">
                     <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Close_profile.png?raw=true" alt="cerrar" class="h-10 w-10">
                 </button>
